--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha1'
     implementation 'com.google.mlkit:translate:16.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.victor:lib:1.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
