--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ android {
 }
 
 dependencies {
-    //noinspection GradleDependency
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.4.32'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
@@ -54,9 +53,10 @@ dependencies {
     implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation platform('com.google.firebase:firebase-bom:26.5.0')
-    compile 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.4.3', ext: 'pom'
 }
