--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0-alpha01'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'com.google.mlkit:translate:16.1.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.victor:lib:1.0.4'
@@ -58,5 +58,6 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.4.3', ext: 'pom'
 }
