--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     implementation 'com.google.mlkit:translate:16.1.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.victor:lib:1.0.4'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+// Chart and graph library
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.7.0'
