--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,18 @@ android {
 dependencies {
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.4.32'
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.beust:klaxon:5.5'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.firebase:firebase-ml-natural-language:19.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.firebase:firebase-ml-natural-language-translate:19.0.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.material:material:1.4.0-alpha02'
-    implementation 'com.google.mlkit:translate:16.1.2'
+    implementation 'com.google.mlkit:translate:16.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.victor:lib:1.0.4'
     implementation 'androidx.cardview:cardview:1.0.0'
