--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.ml_app"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -40,6 +40,7 @@ dependencies {
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.4.32'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.beust:klaxon:5.5'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.firebase:firebase-ml-natural-language:19.0.0'
